# arduino_clock

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
source/: clock.cpp  clock.h  force_compile.h  lcd.cpp  lcd.h  remote.cpp  remote.h  source.ino
